
{2}DELETE command was crashing with -U switch. Fixed.

{2}Processing filenames with spaces was crashing with -U switch. Fixed.



{0}2020-12-11{1}

{2}Settings are WAY easier to understand now! Type SET command and see for yourself!

{2}Added GENERATE -RUNLOG switch to override runlog settings of individual stored procedures.

{2}Merged several functions into the ABOUT command.



{0}2021-01-28{1}

{2}Settings were not being saved correctly. Fixed.



{0}2021-07-22{1}

{2}Added a reminder to enable runlogging on any proc with "delete" in the name.



{0}2021-10-08{1}

{2}Added CHECKOUT Git command.



{0}2022-01-12{1}

{2}Fixed the bug that always resulted in the error message "The current transaction cannot be committed and cannot support operations that write to the log file. Roll back the transaction." whenever an error was caught during a nested procedure call. The error handler code block was trying to decrement the transaction level by performing an uncommittable commit.



{0}2022-02-04{1}

{2}The xact_state variable wasn't being used correctly when checking for active/commitable transactions. Fixed.

{2}Added debug print statements to track procedure nest level, transaction count, and xact_state variable.



{0}2022-02-11{1}

{2}Default proc/function/view now contains, "hello world! love, ``THIS``". The ``THIS`` keyword (four backquotes, not case sensitive) is replaced with [schema].[object] in generated output. Use this anywhere you need to reference the resolved name of the object from itself.



{0}2022-??-??{1}

{2}Removed runlogging feature. It created too many complications.

{2}If proc/function/view creation fails, GRANT statements and PostCode will not be attempted. This helps reduce cascading failures.

{2}Change log now opens in text editor.

{2}Improved settings configuration screen.

{2}Added the option to detect deprecated Squealer objects (tables, views, etc.) since runlogging is no longer supported.

